# partitioner-plugin

./: CMakeLists.txt  README.md  buttonboxmodel.cpp  buttonboxmodel.h  buttonnames.h  devicetreemodel.cpp  devicetreemodel.h  executerthread.cpp  executerthread.h  flagsmodel.cpp  flagsmodel.h  main.cpp  partitionerview.cpp  partitionerview.h  pluginregister.cpp  pluginregister.h  qmlcombobox.cpp  qmlcombobox.h  qmlkdeicon.cpp  qmlkdeicon.h
QWidgets/: qmldir
models/: buttonboxmodel.cpp  buttonboxmodel.h  devicetreemodel.cpp  devicetreemodel.h  flagsmodel.cpp
qml/: ActionButton.qml  ActionList.qml  ButtonBox.qml  CMakeLists.txt  DeviceTree.qml  DiskList.qml  GenericButton.qml  SelectionRectangle.qml  main.qml
qml/dialogs/: ApplyConfirmationDialog.qml  ApplyDialog.qml  CMakeLists.txt  CheckBox.qml  CreatePartitionDialog.qml  CreatePartitionTableDialog.qml  DialogSet.qml  ErrorDialog.qml  FlagsList.qml  FormatPartitionDialog.qml  GenericButton.qml  ModifyPartitionDialog.qml  PartitionSizeBox.qml  RadioButton.qml  RemovePartitionTableDialog.qml  ResizePartitionDialog.qml  SpacedText.qml  SpinBox.qml  SpinBoxStyle.qml  ToolWarningDialog.qml  WaitDialog.qml
qml/dialogs/behaviors/: ButtonBehavior.qml
qml/dialogs/styles/default/: BasicButtonStyle.qml  ButtonStyle.qml  CheckBoxStyle.qml  RadioButtonStyle.qml  SpinBoxStyle.qml
qml/widgets/: CMakeLists.txt  FlagsList.qml  GenericButton.qml  InputLine.qml  PartitionSizeBox.qml  ProgressBar.qml  SpinBox.qml
qml/widgets/styles/default/: ComboBoxStyle.qml  LineEditStyle.qml  ScrollBarStyle.qml  SwitchStyle.qml
qml/widgets/styles/default/ButtonBlock/: ButtonStyle.qml
qmlwidgets/: qmlcombobox.cpp  qmlcombobox.h  qmlkdeicon.cpp  qmlspinbox.cpp  qmlspinbox.h
